# opti2025

./: README.md  build_exe.bat  install_and_run.bat  pyinstaller.spec  pyproject.toml
OmniPlayer2026/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OmniPlayer2026.csproj  app.manifest
OmniPlayer2026/Controls/: VideoPlayerControl.xaml  VideoPlayerControl.xaml.cs
OmniPlayer2026/Services/: LibVlcBootstrapper.cs  PlaybackManager.cs
src/opti2025/: __init__.py  __main__.py  cleanup.py  main.py  max_performance.py  performance.py
src/opti2025/ui/: __init__.py  main_window.py
