[project]
name = "opti2025"
version = "0.1.0"
description = "Opti2025 - application Windows d'optimisation PC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6.0"]

[project.scripts]
opti2025 = "opti2025.main:main"

[tool.pyinstaller]
name = "Opti2025"
entry-point = "opti2025/main.py"
windowed = true
